mdds 0.9.0

* multi_type_vector

  * added another block function template to make it easier to declare
    container with 3 custom element types.

  * added two variants of release():

    * template<typename _T> iterator
      release(size_type pos, _T& value)

    * template<typename _T> iterator
      release(const iterator& pos_hint, size_type pos, _T& value)

  * added a variant of release() that takes no arguments.  This one
    releases all elements and makes the container empty afterward.

  * added a new variant of position() that takes const_iterator as
    position hint.

    * std::pair<const_iterator, size_type>
      position(const const_iterator& pos_hint, size_type pos) const

  * fixed a memory leak in

    * set(size_type pos, const _T& it_begin, const _T& it_end).

  * added compile-time macro MDDS_MULTI_TYPE_VECTOR_USE_DEQUE to allow
    users to specify std::deque as the underlying data array.  By
    default, multi_type_vector uses std::vector as the underlying data
    array container.

  * added a new variant of swap() that allows partial swapping of
    content with another container.

  * added static block type identifier so that the numeric block type
    ID can be deduced from the block type directly.

  * value_type (which is a type of object returned when dereferencing
    an iterator) now stores 'position' which is the logical position
    of the first element of a block.

  * added position_type and const_position_type which are typedefs to
    the return types of position() methods.

* multi_type_matrix:

  * get_numeric(), get_boolean(), and get_string() are made more
    efficient.

  * added position() method that returns a reference object to an
    element (position object).

  * added variants of get_numeric(), get_boolean() and get_string()
    that retrieves elements from position objects.

  * added variants of set() that sets new element values via position
    objects.

mdds 0.8.1

* multi_type_vector
