@@ -1,3 +1,8 @@
+* multi_type_matrix
+
+  * allow user to access to the internal multi_type_vector container
+    used for internal element value storage.
+
 mdds 0.9.0
 
 * multi_type_vector
